--- a/index.html
+++ b/index.html
@@ -93,6 +93,23 @@
     z-index: 1;
     position: relative;
   }
+  @media (max-width: 600px) {
+    body {
+      background-size: contain;
+    }
+    .titulo {
+      font-size: 2.3rem;
+      padding: 0 10px;
+    }
+    .contador {
+      font-size: 1.5rem;
+      padding: 16px 8px;
+    }
+    .frase {
+      font-size: 1.3rem;
+      padding: 0 10px;
+    }
+  }
 </style>
 </head>
 <body>
